plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

sourceCompatibility = 16
targetCompatibility = 16

group 'com.dynxsty.dsbmobilebot'

repositories {
    mavenCentral()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    implementation('net.dv8tion:JDA:5.0.0-alpha.11') {
        exclude module: 'opus-java'
    }
    implementation 'com.github.DynxstyGIT:DIH4JDA:1.4.2'
    implementation 'de.sematre.dsbmobile:DSBmobile-API:1.8'
    implementation 'net.sourceforge.tess4j:tess4j:5.2.0'
    
    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'

    // H2 Database
    implementation group: 'com.h2database', name: 'h2', version: '2.1.212'
    implementation 'com.zaxxer:HikariCP:5.0.1'

    // Lombok Annotations
    compileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'

    // Apache Commons
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
}

jar{
    manifest{ attributes("Manifest-Version": "1.0", "Main-Class": "com.dynxsty.dsbmobilebot.Bot") }
}

java{
    toolchain{
        sourceCompatibility(sourceCompatibility as JavaVersion)
        targetCompatibility(targetCompatibility as JavaVersion)
    }
}

tasks.withType(JavaCompile){ options.encoding = 'UTF-8'}
tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}
test { useJUnitPlatform() }